[package]
name = "bitcoin_hashes"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
documentation = "https://docs.rs/bitcoin-hashes/"
keywords = [ "crypto", "bitcoin", "hash", "digest" ]
readme = "README.md"

[lib]
name = "bitcoin_hashes"
path = "src/lib.rs"

[features]
unstable = []  # for benchmarking

[dependencies]
byteorder = "1.2"

## Library should never panic, but has some panic paths because of io::Write.
## Try to minimize performance/compilation hit of these unused paths by making them aborts.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

